--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-player": "^1.13.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
